# embassy-cli

./: Cargo.toml  README.md
data/: mcu_list.json
src/: data.rs  generate.rs  git.rs  main.rs
src/commands/: completion.rs  completions.rs  create.rs  mod.rs
src/generator/: data.rs  generate.rs  mod.rs  templates.rs
template/: Cargo.toml.liquid  rust-toolchain.toml.liquid
template/.cargo/: config.toml.liquid
template/src/: main.rs.liquid
