[package]
name = "embassy-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72" }
clap = { version = "4.2.7", features = ["derive"] }
inquire = "0.6.2"
lazy_static = "1.4.0"
regex = "1.8.4"
reqwest = "0.11.20"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
toml_edit = "0.19.14"
