[package]
name = "embassy-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
clap_complete = "4.5.1"
inquire = "0.7.0"
lazy_static = "1.4.0"
regex = "1.10.3"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
toml_edit = "0.22.6"
